kongshum/kongshum-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongshum
  namespace: kongshum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kongshum
  template:
    metadata:
      labels:
        app: kongshum
    spec:
      containers:
        - name: kongshum
          image: 'ghcr.io/meta-metopia/kongshum-backend:v1.0.9'
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - name: server-port
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
