kongshum/kongshum-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kongshum-service
  namespace: kongshum
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: kongshum
