kongshum/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: kongshum
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - kongshumapi.net
      secretName: ingress-secret
  rules:
    - host: kongshumapi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kongshum-service
                port:
                  number: 80
